--- a/ImageFeed-ios/Base.lproj/Main.storyboard
+++ b/ImageFeed-ios/Base.lproj/Main.storyboard
@@ -1,24 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--ImageList-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="ImageList" id="BYZ-38-t0r" customClass="ImagesListViewController" customModule="ImageFeed_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="evo-6T-ENS">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <color key="backgroundColor" name="YP_Black"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="229" id="j7c-xv-qJd" customClass="ImagesListCell" customModule="ImageFeed_ios" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="229"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="j7c-xv-qJd" id="Zpj-Qb-KWj">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="229"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="jaH-YO-170">
+                                                    <rect key="frame" x="16" y="4" width="361" height="221"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="16"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f86-bT-nde" userLabel="Like Button">
+                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" image="LikeButtonOn"/>
+                                                </button>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TfS-mf-SGY">
+                                                    <rect key="frame" x="0.0" y="195" width="393" height="34"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="34" id="CnK-Tg-E6o"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="51J-ux-kip" userLabel="Date Label">
+                                                    <rect key="frame" x="24.000000000000007" y="201" width="101.66666666666669" height="16"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" name="YP_White"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="jaH-YO-170" secondAttribute="bottom" constant="4" id="2l5-S3-lSG"/>
+                                                <constraint firstItem="jaH-YO-170" firstAttribute="trailing" secondItem="Zpj-Qb-KWj" secondAttribute="trailing" constant="-16" id="3iW-h3-1DU"/>
+                                                <constraint firstItem="jaH-YO-170" firstAttribute="leading" secondItem="Zpj-Qb-KWj" secondAttribute="leading" constant="16" id="4hC-rf-O5r"/>
+                                                <constraint firstItem="f86-bT-nde" firstAttribute="trailing" secondItem="jaH-YO-170" secondAttribute="trailing" id="4ks-36-SoY"/>
+                                                <constraint firstItem="jaH-YO-170" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="51J-ux-kip" secondAttribute="trailing" constant="8" id="GHt-Mu-kPv"/>
+                                                <constraint firstItem="jaH-YO-170" firstAttribute="top" secondItem="Zpj-Qb-KWj" secondAttribute="top" constant="4" id="KZ3-XB-SFA"/>
+                                                <constraint firstItem="TfS-mf-SGY" firstAttribute="width" secondItem="Zpj-Qb-KWj" secondAttribute="width" id="PMQ-96-bmN"/>
+                                                <constraint firstItem="51J-ux-kip" firstAttribute="leading" secondItem="jaH-YO-170" secondAttribute="leading" constant="8" id="TN2-Fz-rsY"/>
+                                                <constraint firstItem="f86-bT-nde" firstAttribute="top" secondItem="jaH-YO-170" secondAttribute="top" id="Whn-yw-8qE"/>
+                                                <constraint firstItem="jaH-YO-170" firstAttribute="bottom" secondItem="51J-ux-kip" secondAttribute="bottom" constant="8" id="ZTa-Ol-oAI"/>
+                                                <constraint firstItem="TfS-mf-SGY" firstAttribute="centerX" secondItem="Zpj-Qb-KWj" secondAttribute="centerX" id="dBa-2e-kf4"/>
+                                                <constraint firstItem="TfS-mf-SGY" firstAttribute="bottom" secondItem="Zpj-Qb-KWj" secondAttribute="bottom" id="e6u-wx-uoH"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="cellImage" destination="jaH-YO-170" id="x5g-W7-hRQ"/>
+                                            <outlet property="dateLabel" destination="51J-ux-kip" id="5N6-sK-xuF"/>
+                                            <outlet property="gradientView" destination="TfS-mf-SGY" id="DUP-Ek-7Sp"/>
+                                            <outlet property="likeButton" destination="f86-bT-nde" id="Rmt-ga-XwG"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="FJH-Pt-j8V"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="eWg-bu-Elh"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" name="YP_Black"/>
+                        <constraints>
+                            <constraint firstItem="evo-6T-ENS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="CIk-ss-q2n"/>
+                            <constraint firstItem="evo-6T-ENS" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="SrF-tz-MOv"/>
+                            <constraint firstItem="evo-6T-ENS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="UWr-hx-k6I"/>
+                            <constraint firstItem="evo-6T-ENS" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="u9A-ha-tOW"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="evo-6T-ENS" id="eXq-uZ-0i5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="64.885496183206101" y="-2.1126760563380285"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="0" width="200" height="132"/>
+        <image name="LikeButtonOn" width="44" height="44"/>
+        <namedColor name="YP_Black">
+            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YP_White">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
