--- a/ImageFeed-ios/Base.lproj/Main.storyboard
+++ b/ImageFeed-ios/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="66i-Tl-84a">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ION-l5-JYs">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -42,7 +42,7 @@
                                                     <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" image="LikeButtonOn"/>
+                                                    <state key="normal" image="like_button_on"/>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TfS-mf-SGY">
                                                     <rect key="frame" x="0.0" y="195" width="393" height="34"/>
@@ -99,13 +99,15 @@
                             <constraint firstItem="evo-6T-ENS" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="u9A-ha-tOW"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="lOg-XO-5u7"/>
                     <connections>
                         <outlet property="tableView" destination="evo-6T-ENS" id="eXq-uZ-0i5"/>
+                        <segue destination="QXJ-X6-BsC" kind="presentation" identifier="ShowSingleImage" id="MIO-1j-e1c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="64.885496183206101" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="98.473282442748086" y="-1130.2816901408451"/>
         </scene>
         <!--Profile-->
         <scene sceneID="6S7-sd-asA">
@@ -115,7 +117,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UserPick" translatesAutoresizingMaskIntoConstraints="NO" id="dQu-9M-EbC">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_pick" translatesAutoresizingMaskIntoConstraints="NO" id="dQu-9M-EbC">
                                 <rect key="frame" x="16" y="91" width="70" height="70"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <userDefinedRuntimeAttributes>
@@ -150,9 +152,9 @@
                                 <rect key="frame" x="333" y="104" width="44" height="44"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="LogoutButton"/>
+                                <state key="normal" image="logout_button"/>
                                 <connections>
-                                    <action selector="didTapLogout:" destination="66i-Tl-84a" eventType="touchUpInside" id="wyl-ID-UOv"/>
+                                    <action selector="didTapLogout:" destination="66i-Tl-84a" eventType="touchUpInside" id="8Rg-tG-W7b"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -175,9 +177,10 @@
                             <constraint firstItem="lRv-XG-xr9" firstAttribute="trailing" secondItem="OuB-f9-TbZ" secondAttribute="trailing" id="wzR-kv-nCY"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="vtd-qO-C4T"/>
                     <connections>
                         <outlet property="loginNameLabel" destination="VVo-Eb-zhH" id="Tzz-TT-QTU"/>
-                        <outlet property="logoutButton" destination="Hd1-3z-Gad" id="wIh-Fr-cA5"/>
+                        <outlet property="logoutButton" destination="Hd1-3z-Gad" id="BJz-QM-ogL"/>
                         <outlet property="profileTextLabel" destination="lRv-XG-xr9" id="xpp-Up-sse"/>
                         <outlet property="userNameLabel" destination="OuB-f9-TbZ" id="gxA-WA-LBl"/>
                         <outlet property="userPickImageView" destination="dQu-9M-EbC" id="0Z0-gZ-KkE"/>
@@ -185,14 +188,108 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d65-xY-B4F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-828.24427480916029" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="-828" y="-405"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="kK7-NV-hmi">
+            <objects>
+                <tabBarController id="ION-l5-JYs" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4yF-MN-bO7">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" name="YP_White"/>
+                        <tabBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="YP_Black"/>
+                        </tabBarAppearance>
+                    </tabBar>
+                    <connections>
+                        <segue destination="HY9-vG-iQ5" kind="relationship" relationship="viewControllers" id="0ae-14-BSk"/>
+                        <segue destination="66i-Tl-84a" kind="relationship" relationship="viewControllers" id="Ozn-l8-EcM"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZaJ-4e-0LM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1608" y="-739"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="d8p-Yc-WX0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HY9-vG-iQ5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="hJT-2t-czX"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="w6f-vL-H2c">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" name="YP_White"/>
+                        <color key="barTintColor" name="YP_White"/>
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="YP_Black"/>
+                        </navigationBarAppearance>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="wFg-4b-PyE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="53r-Mw-SyH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-828.24427480916029" y="-1130.2816901408451"/>
+        </scene>
+        <!--SingleImage-->
+        <scene sceneID="vUz-yG-7vD">
+            <objects>
+                <viewController title="SingleImage" modalTransitionStyle="flipHorizontal" modalPresentationStyle="fullScreen" id="QXJ-X6-BsC" customClass="SingleImageViewController" customModule="ImageFeed_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Hug-wo-uRh">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="mdp-Py-Lc5">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBE-e1-ioB">
+                                <rect key="frame" x="8" y="8" width="48" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="de9-g5-XsE"/>
+                                    <constraint firstAttribute="height" constant="48" id="htj-S7-dbq"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="nav_back_button"/>
+                                <connections>
+                                    <action selector="didTapBackButton:" destination="QXJ-X6-BsC" eventType="touchUpInside" id="m6Q-tZ-erf"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ZxC-lk-ocH"/>
+                        <color key="backgroundColor" name="YP_Black"/>
+                        <constraints>
+                            <constraint firstItem="BBE-e1-ioB" firstAttribute="top" secondItem="ZxC-lk-ocH" secondAttribute="top" constant="8" id="9H6-Jb-JUf"/>
+                            <constraint firstAttribute="trailing" secondItem="mdp-Py-Lc5" secondAttribute="trailing" id="Cas-c0-dC8"/>
+                            <constraint firstAttribute="bottom" secondItem="mdp-Py-Lc5" secondAttribute="bottom" id="JPr-DT-JIK"/>
+                            <constraint firstItem="BBE-e1-ioB" firstAttribute="leading" secondItem="ZxC-lk-ocH" secondAttribute="leading" constant="8" id="Jdw-QK-rp3"/>
+                            <constraint firstItem="mdp-Py-Lc5" firstAttribute="leading" secondItem="Hug-wo-uRh" secondAttribute="leading" id="hPa-EX-ZwA"/>
+                            <constraint firstItem="mdp-Py-Lc5" firstAttribute="top" secondItem="Hug-wo-uRh" secondAttribute="top" id="yo0-XB-fZ2"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="50v-Jw-LSk"/>
+                    <connections>
+                        <outlet property="imageView" destination="mdp-Py-Lc5" id="RxF-zb-4AV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eUF-QR-jt8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="940" y="-1130"/>
         </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
-        <image name="LikeButtonOn" width="44" height="44"/>
-        <image name="LogoutButton" width="44" height="44"/>
-        <image name="UserPick" width="70" height="70"/>
+        <image name="like_button_on" width="44" height="44"/>
+        <image name="logout_button" width="44" height="44"/>
+        <image name="nav_back_button" width="24" height="24"/>
+        <image name="tab_editorial_active" width="30" height="30"/>
+        <image name="tab_profile_active" width="30" height="30"/>
+        <image name="user_pick" width="70" height="70"/>
         <namedColor name="YP_Black">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
