--- a/ImageFeed-ios/Base.lproj/Main.storyboard
+++ b/ImageFeed-ios/Base.lproj/Main.storyboard
@@ -10,62 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Auth View Controller-->
-        <scene sceneID="9Yi-eO-Aa6">
-            <objects>
-                <viewController storyboardIdentifier="AuthViewController" id="J4N-BG-aSz" customClass="AuthViewController" customModule="ImageFeed_ios" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="TKG-iM-Rxf">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Pbu-CW-gnQ">
-                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="2E8-Lc-ijY"/>
-                                    <constraint firstAttribute="width" constant="60" id="Xeh-Ri-roT"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cRu-CF-snM">
-                                <rect key="frame" x="16" y="680" width="361" height="48"/>
-                                <color key="backgroundColor" name="YP_White"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="UTw-Dg-DqA"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Войти">
-                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
-                                    <color key="baseForegroundColor" name="YP_Black"/>
-                                </buttonConfiguration>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="16"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <segue destination="yWr-d7-dar" kind="presentation" identifier="ShowWebView" modalPresentationStyle="overFullScreen" id="9WF-x2-Out"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="LEx-Ev-h1Q"/>
-                        <color key="backgroundColor" name="YP_Black"/>
-                        <constraints>
-                            <constraint firstItem="Pbu-CW-gnQ" firstAttribute="centerY" secondItem="TKG-iM-Rxf" secondAttribute="centerY" id="GcZ-1a-3hT"/>
-                            <constraint firstItem="LEx-Ev-h1Q" firstAttribute="bottom" secondItem="cRu-CF-snM" secondAttribute="bottom" constant="90" id="T1f-17-lqf"/>
-                            <constraint firstItem="cRu-CF-snM" firstAttribute="leading" secondItem="LEx-Ev-h1Q" secondAttribute="leading" constant="16" id="ky2-2F-SJ6"/>
-                            <constraint firstItem="LEx-Ev-h1Q" firstAttribute="trailing" secondItem="cRu-CF-snM" secondAttribute="trailing" constant="16" id="yh0-jy-osY"/>
-                            <constraint firstItem="Pbu-CW-gnQ" firstAttribute="centerX" secondItem="TKG-iM-Rxf" secondAttribute="centerX" id="yuD-vP-dey"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IWa-Gi-3dt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="97" y="-1837"/>
-        </scene>
         <!--Web View View Controller-->
         <scene sceneID="V0P-Of-e0V">
             <objects>
-                <viewController id="yWr-d7-dar" customClass="WebViewViewController" customModule="ImageFeed_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebViewViewController" id="yWr-d7-dar" customClass="WebViewViewController" customModule="ImageFeed_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qSi-TH-YSy">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -79,7 +27,7 @@
                                 </wkWebViewConfiguration>
                             </wkWebView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tGc-RL-aM7">
-                                <rect key="frame" x="9" y="3" width="24" height="24"/>
+                                <rect key="frame" x="9" y="62" width="24" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="Xod-IY-Fay"/>
                                     <constraint firstAttribute="width" constant="24" id="gCB-8U-buv"/>
@@ -91,7 +39,7 @@
                                 </connections>
                             </button>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="De7-WV-Dva">
-                                <rect key="frame" x="0.0" y="27" width="393" height="4"/>
+                                <rect key="frame" x="0.0" y="86" width="393" height="4"/>
                                 <color key="progressTintColor" name="YP_Black"/>
                             </progressView>
                         </subviews>
@@ -313,7 +261,6 @@
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
-        <image name="auth_screen_logo" width="60" height="60"/>
         <image name="like_button_on" width="44" height="44"/>
         <image name="nav_back_black_button" width="24" height="24"/>
         <image name="nav_back_button" width="24" height="24"/>
